--- a/sam.html
+++ b/sam.html
@@ -4,7 +4,15 @@
 	<title></title>
 </head>
 <body>
-	samyak jain 
-	harshil garg
+	Kaustubh Pandey
+        Harsh Mishra
+      	Rishabh Goel
+	Yash
+	Samyak Jain
+	Karan
+	Vishakha
+
+with Love <3 Team ERP
+
 </body>
 </html>
